ingress-annotations.yaml
#Use these annotations to increase the size of clients posting data through NGINX ingress controller
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.org/client-max-body-size: 1024m
  creationTimestamp: 2019-01-30T20:30:54Z
  generation: 1
  labels:
    app: something
    chart: something-0.1.0
    heritage: Tiller
    release: something
  name: something-ingress
  namespace: something
spec:
  rules:
  - host: something.internal.company.com
    http:
      paths:
      - backend:
          serviceName: something-service
          servicePort: http
        path: /
